<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <!-- TextView for "Settings" -->
    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        android:textColor="?attr/colorOnBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- CardView for Theme -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <!-- Icon Tema -->
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/theme_icon"
                android:padding="8dp"
                android:src="@drawable/ic_theme"
                app:tint="?attr/colorOnBackground" />

            <!-- Text Deskripsi -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_theme_setting"
                    android:textColor="?android:attr/colorControlNormal"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Switch untuk Tema -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView untuk Pengingat Harian -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_theme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <!-- Icon Pengingat Harian -->
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/reminder_icon"
                android:padding="8dp"
                android:src="@drawable/ic_reminder_daily"
                app:tint="?attr/colorOnBackground" />

            <!-- Text Deskripsi -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_reminder"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_setting_notification"
                    android:textColor="?android:attr/colorControlNormal"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Switch untuk Pengingat Harian -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
